<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="pl.rzeszow.wsiz.zhekabandit97.recipe4u.old.InfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recipe2U info"
            android:id="@+id/textView10"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textDesc"
                    android:id="@+id/plainText"
                    android:layout_margin="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:adjustViewBounds="true"
                    android:src="@drawable/searchscreen"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textDesc1"
                    android:id="@+id/textView6"
                    android:layout_margin="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:adjustViewBounds="true"
                    android:src="@drawable/search2"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textDesc2"
                    android:id="@+id/textView7"
                    android:layout_margin="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:adjustViewBounds="true"
                    android:src="@drawable/searchresult2"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textDesc3"
                    android:id="@+id/textView8"
                    android:layout_margin="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:adjustViewBounds="true"
                    android:src="@drawable/top"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textDesc4"
                    android:id="@+id/textView9"
                    android:layout_margin="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:adjustViewBounds="true"
                    android:src="@drawable/last"
                    android:layout_margin="10dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
